--- a/ConnectFour/MainWindow.xaml
+++ b/ConnectFour/MainWindow.xaml
@@ -6,21 +6,25 @@
         xmlns:local="clr-namespace:ConnectFour"
         mc:Ignorable="d"
         Title="MainWindow" Height="800" Width="800" Initialized="Window_Initialized">
-    
+
     <Grid Name="MainGrid" Margin="45,24,40,8">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="362*"/>
+            <ColumnDefinition Width="353*"/>
+        </Grid.ColumnDefinitions>
 
-        <Canvas Background="DodgerBlue" Name="Playground"></Canvas>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Name="TestLabel"/>
 
-        <Grid Name="Rectangles">
-            <Rectangle HorizontalAlignment="Left" Height="730" Fill="White" Opacity="0" VerticalAlignment="Center" Width="100" Margin="0,0,0,0" Grid.Column="0" Name="r0"/>
-            <Rectangle HorizontalAlignment="Left" Height="730" Fill="White" Opacity="0" VerticalAlignment="Center" Width="100" Margin="100,0,0,0" Grid.Column="1" Name="r1"/>
-            <Rectangle HorizontalAlignment="Left" Height="730" Fill="White" Opacity="0" VerticalAlignment="Center" Width="100" Margin="200,0,0,0" Grid.Column="2" Name="r2"/>
-            <Rectangle HorizontalAlignment="Left" Height="730" Fill="White" Opacity="0" VerticalAlignment="Center" Width="100" Margin="300,0,0,0" Grid.Column="3" Name="r3"/>
-            <Rectangle HorizontalAlignment="Left" Height="730" Fill="White" Opacity="0" VerticalAlignment="Center" Width="100" Margin="400,0,0,0" Grid.Column="4" Name="r4"/>
-            <Rectangle HorizontalAlignment="Left" Height="730" Fill="White" Opacity="0" VerticalAlignment="Center" Width="100" Margin="500,0,0,0" Grid.Column="5" Name="r5"/>
-            <Rectangle HorizontalAlignment="Left" Height="730" Fill="White" Opacity="0" VerticalAlignment="Center" Width="100" Margin="600,0,0,0" Grid.Column="6" Name="r6"/>
+        <Canvas Background="DodgerBlue" Name="Playground" Margin="0,50,0,50" Grid.ColumnSpan="2"></Canvas>
+        <Grid Name="Rectangles" Margin="0,50,0,50" Grid.ColumnSpan="2">
+            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Grid.Column="0" Name="r0"/>
+            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Margin="100,0,0,0" Name="r1"/>
+            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Margin="200,0,0,0" Name="r2"/>
+            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Margin="300,0,0,0" Name="r3"/>
+            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Margin="400,0,0,0" Name="r4"/>
+            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Margin="500,0,0,0" Name="r5"/>
+            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Margin="600,0,0,0" Name="r6"/>
         </Grid>
-        <Label Content="Label" Canvas.Left="339" Canvas.Top="769" HorizontalAlignment="Center" VerticalAlignment="Top" Name="TestLabel"/>
     </Grid>
 
 </Window>
