--- a/ConnectFour/MainWindow.xaml
+++ b/ConnectFour/MainWindow.xaml
@@ -5,25 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ConnectFour"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="800" Initialized="Window_Initialized">
+        Title="MainWindow" Height="600" Width="600" Initialized="Window_Initialized">
 
     <Grid Name="MainGrid" Margin="45,24,40,8">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="362*"/>
-            <ColumnDefinition Width="353*"/>
-        </Grid.ColumnDefinitions>
-
         <Label Content="Label" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Name="TestLabel"/>
 
-        <Canvas Background="DodgerBlue" Name="Playground" Margin="0,50,0,50" Grid.ColumnSpan="2"></Canvas>
-        <Grid Name="Rectangles" Margin="0,50,0,50" Grid.ColumnSpan="2">
-            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Grid.Column="0" Name="r0"/>
-            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Margin="100,0,0,0" Name="r1"/>
-            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Margin="200,0,0,0" Name="r2"/>
-            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Margin="300,0,0,0" Name="r3"/>
-            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Margin="400,0,0,0" Name="r4"/>
-            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Margin="500,0,0,0" Name="r5"/>
-            <Rectangle HorizontalAlignment="Left" Height="630" Fill="White" Opacity="0" VerticalAlignment="Top" Width="100" Margin="600,0,0,0" Name="r6"/>
+        <Canvas Background="DodgerBlue" Name="Playground" Margin="0,50,10,50" Grid.ColumnSpan="2"></Canvas>
+        <Grid Name="Rectangles" Margin="0,50,10,50">
+            <Rectangle HorizontalAlignment="Left" Height="450" Fill="White" Opacity="0" VerticalAlignment="Top" Width="70" Grid.Column="0" Name="r0"/>
+            <Rectangle HorizontalAlignment="Left" Height="450" Fill="White" Opacity="0" VerticalAlignment="Top" Width="70" Margin="70,0,0,0" Name="r1"/>
+            <Rectangle HorizontalAlignment="Left" Height="450" Fill="White" Opacity="0" VerticalAlignment="Top" Width="70" Margin="140,0,0,0" Name="r2"/>
+            <Rectangle HorizontalAlignment="Left" Height="450" Fill="White" Opacity="0" VerticalAlignment="Top" Width="70" Margin="210,0,0,0" Name="r3"/>
+            <Rectangle HorizontalAlignment="Left" Height="450" Fill="White" Opacity="0" VerticalAlignment="Top" Width="70" Margin="280,0,0,0" Name="r4"/>
+            <Rectangle HorizontalAlignment="Left" Height="450" Fill="White" Opacity="0" VerticalAlignment="Top" Width="70" Margin="350,0,0,0" Name="r5"/>
+            <Rectangle HorizontalAlignment="Left" Height="450" Fill="White" Opacity="0" VerticalAlignment="Top" Width="70" Margin="420,0,0,0" Name="r6"/>
         </Grid>
     </Grid>
 
